[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/ui/labels/PasswordLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/labels/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/labels/Version.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/labels/UsernameLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/Game-Over.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/ui/buttons/RegisterButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/buttons/LoginButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/LoginScreen.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 1
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.964706, 0.827451, 0.0862745, 1 )
self_modulate = Color( 0.964706, 0.827451, 0.0862745, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -790.0
margin_top = -525.0
margin_right = 790.0
margin_bottom = 525.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="VBoxContainer" instance=ExtResource( 2 )]

[node name="Version" parent="VBoxContainer" instance=ExtResource( 3 )]

[node name="UsernameLabel" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 286.0
margin_right = 1580.0
margin_bottom = 399.0

[node name="UsernameField" type="LineEdit" parent="VBoxContainer"]
modulate = Color( 0, 0, 0, 0.447059 )
margin_top = 403.0
margin_right = 1580.0
margin_bottom = 470.0
custom_fonts/font = SubResource( 1 )
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/cursor_color = Color( 1, 0, 0, 1 )
text = "username"
align = 1

[node name="PasswordLabel" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 474.0
margin_right = 1580.0
margin_bottom = 587.0

[node name="PasswordField" type="LineEdit" parent="VBoxContainer"]
modulate = Color( 0, 0, 0, 0.447059 )
margin_top = 591.0
margin_right = 1580.0
margin_bottom = 658.0
custom_fonts/font = SubResource( 1 )
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/cursor_color = Color( 1, 0, 0, 1 )
align = 1
secret = true

[node name="LoginButton" parent="VBoxContainer" instance=ExtResource( 7 )]
margin_top = 662.0
margin_right = 1580.0
margin_bottom = 802.0
custom_styles/hover = SubResource( 2 )

[node name="RegisterButton" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 806.0
margin_right = 1580.0
margin_bottom = 946.0
custom_styles/hover = SubResource( 2 )
